# Evershort-Den

./: bun.lockb  package-lock.json  package.json  tailwind.config.js  vite.config.ts
src/: App.tsx
src-tauri/: Cargo.toml  apps.txt  build.rs  tauri.conf.json
src-tauri/src/: main.rs
src/components/: add-app-modal.tsx  app-card.tsx
